--- a/use_cases/snowprint/SETUP_AGENT_SNOWPRINT.ipynb
+++ b/use_cases/snowprint/SETUP_AGENT_SNOWPRINT.ipynb
@@ -5,12 +5,12 @@
    "name": "streamlit"
   },
   "lastEditStatus": {
-   "notebookId": "6l6nufoo3fw2436et7kh",
-   "authorId": "8923756336865",
+   "notebookId": "qisija3lyfadftjmqcn7",
+   "authorId": "2022491430521",
    "authorName": "ADMIN",
    "authorEmail": "michael.gorkow@snowflake.com",
-   "sessionId": "c1d38cd1-ba5a-4c29-9286-453c8a1050e8",
-   "lastEditTime": 1741729366417
+   "sessionId": "9ae0e8af-9431-46e7-a803-6d07a9c36309",
+   "lastEditTime": 1741759845980
   }
  },
  "nbformat_minor": 5,
@@ -111,7 +111,7 @@
     "name": "CORTEX_SEARCH5"
    },
    "outputs": [],
-   "source": "-- Create a Cortex Search Service for Annual Reports\nCREATE CORTEX SEARCH SERVICE IF NOT EXISTS SNOWPRINT_PRODUCT_GUIDES\n  ON CHUNK_TEXT\n  ATTRIBUTES RELATIVE_PATH\n  WAREHOUSE = COMPUTE_WH\n  TARGET_LAG = '1 hour'\n  EMBEDDING_MODEL = 'snowflake-arctic-embed-l-v2.0'\nAS (\n  SELECT\n      CHUNK_TEXT,\n      RELATIVE_PATH,\n      CHUNK_INDEX\n  FROM CHUNKED_TEXT\n);"
+   "source": "-- Create a Cortex Search Service for Annual Reports\nCREATE CORTEX SEARCH SERVICE IF NOT EXISTS SNOWPRINT_PRODUCT_GUIDES\n  ON CHUNK_TEXT\n  ATTRIBUTES RELATIVE_PATH, CHUNK_INDEX\n  WAREHOUSE = COMPUTE_WH\n  TARGET_LAG = '1 hour'\n  EMBEDDING_MODEL = 'snowflake-arctic-embed-l-v2.0'\nAS (\n  SELECT\n      CHUNK_TEXT,\n      RELATIVE_PATH,\n      CHUNK_INDEX\n  FROM CHUNKED_TEXT\n);"
   },
   {
    "cell_type": "markdown",
