--- a/use_cases/main/SETUP_AGENT_MAIN.ipynb
+++ b/use_cases/main/SETUP_AGENT_MAIN.ipynb
@@ -147,7 +147,7 @@
     "-- Create a Cortex Search Service for Annual Reports\n",
     "CREATE OR REPLACE CORTEX SEARCH SERVICE ANNUAL_REPORTS_SEARCH\n",
     "  ON CHUNK_TEXT\n",
-    "  ATTRIBUTES RELATIVE_PATH CHUNK_INDEX\n",
+    "  ATTRIBUTES RELATIVE_PATH, CHUNK_INDEX\n",
     "  WAREHOUSE = COMPUTE_WH\n",
     "  TARGET_LAG = '1 hour'\n",
     "  EMBEDDING_MODEL = 'snowflake-arctic-embed-l-v2.0'\n",
@@ -175,7 +175,7 @@
     "-- Create a Cortex Search Service for Annual Reports\n",
     "CREATE OR REPLACE CORTEX SEARCH SERVICE PRODUCT_SPECIFICATIONS_SEARCH\n",
     "  ON CHUNK_TEXT\n",
-    "  ATTRIBUTES RELATIVE_PATH CHUNK_INDEX\n",
+    "  ATTRIBUTES RELATIVE_PATH, CHUNK_INDEX\n",
     "  WAREHOUSE = COMPUTE_WH\n",
     "  TARGET_LAG = '1 hour'\n",
     "  EMBEDDING_MODEL = 'snowflake-arctic-embed-l-v2.0'\n",
