changed search service names of analyst to exclude them from streamlit view

--- a/use_cases/main/SETUP_AGENT_MAIN.ipynb
+++ b/use_cases/main/SETUP_AGENT_MAIN.ipynb
@@ -367,7 +367,7 @@
    },
    "outputs": [],
    "source": [
-    "CREATE OR REPLACE CORTEX SEARCH SERVICE PRODUCT_SEARCH\n",
+    "CREATE OR REPLACE CORTEX SEARCH SERVICE _ANALYST_PRODUCT_SEARCH\n",
     "  ON PRODUCT\n",
     "  WAREHOUSE = COMPUTE_WH\n",
     "  TARGET_LAG = '1 hour'\n",
@@ -390,7 +390,7 @@
    },
    "outputs": [],
    "source": [
-    "CREATE OR REPLACE CORTEX SEARCH SERVICE COUNTRY_SEARCH\n",
+    "CREATE OR REPLACE CORTEX SEARCH SERVICE _ANALYST_COUNTRY_SEARCH\n",
     "  ON COUNTRY\n",
     "  WAREHOUSE = COMPUTE_WH\n",
     "  TARGET_LAG = '1 hour'\n",
@@ -413,7 +413,7 @@
    },
    "outputs": [],
    "source": [
-    "CREATE OR REPLACE CORTEX SEARCH SERVICE CUSTOMER_SEARCH\n",
+    "CREATE OR REPLACE CORTEX SEARCH SERVICE _ANALYST_CUSTOMER_SEARCH\n",
     "  ON CUSTOMER\n",
     "  WAREHOUSE = COMPUTE_WH\n",
     "  TARGET_LAG = '1 hour'\n",
